# httpie

./: Cargo.toml  README.md
src/: lib.rs
src/cmds/: get.rs  mod.rs  post.rs  print.rs  utils.rs
