[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "httpie"
path = "src/lib.rs"

[[bin]]
name = "command"
path = "src/bin/command.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "3.0.13", features = ["derive"] }
colored = "2"
jsonxf = "1.1.1"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
syntect = "^4.6"
axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

[features]
